easy coding -
引用类型 朝花夕拾：
1 软引用/弱引用 本身就是一个对象，其中封装了真实的对象；
2 如果条件满足,在GC回收时, 会把 真实对象 & 引用对象一同回收?